--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h4 {
 	border: 1px solid #cacece;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
 		inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
-	padding: 10px;
+	padding: 5px 0 0 6px;
 	border-radius: 10px;
 	width: 33px;
 	height: 50px;
@@ -65,7 +65,7 @@ h4 {
 
 #checkbox-styles:checked {
 	background-color: #e9ecee;
-	border: 1px solid #adb8c0;
+	border: 3px solid green;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
 		inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05),
 		inset 15px 10px -12px rgba(255, 255, 255, 0.1);
@@ -74,7 +74,7 @@ h4 {
 
 #checkbox-styles:checked:after {
 	content: '\2714';
-	font-size: 14px;
+	font-size: 20px;
 	color: green;
 }
 
